<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">500公交</string>
    <string name="app_name_english">Busleep</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="slogan_text">请允许我来照顾你，小伙伴们！ </string>
    <string name="navi_menu_user_center">个人中心</string>
    <string name="navi_menu_sleep_plan">睡眠计划</string>
    <string name="navi_menu_bus_near">周边公交</string>
    <string name="navi_menu_bus_query">公交查询</string>
    <string name="navi_menu_share">分享</string>
    <string name="navi_menu_more">更多</string>
    <string name="bus_route">线路 </string>
    <string name="bus_transfer">换乘</string>
    <string name="bus_station">站点</string>
    <string name="bus_line_search_hint">请输入线路名，如521,591</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_bus_line_detail">BusLineDetailActivity</string>
    <string name="tab_reverse_busline">返程</string>
    <string name="tab_collect">收藏</string>
    <string name="tab_sleep_plan">睡眠计划</string>
    <string name="title_activity_busline_baidu_map">BuslineBaiduMapActivity</string>
    <string name="title_activity_test_baidu">TestBaiduActivity</string>
    <string name="title_activity_sleep_plan">SleepPlanActivity</string>
	<string name="tips">提示</string>
	<string name="add_alarm">添加闹铃</string>
	
</resources>
